# Rental-Price-Prediction-End-to-End-MLOps-Project

./: .env  .gitignore  Makefile  README.md  config.py  data_collection.py  data_preparation.py  db.sqlite  db_model.py  model.py  model_baseline.ipynb  model_services.py  pyproject.toml  runner.py  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml
app/: app.py
app/templates/: index.html
docs/: architecture.md  usage_guide.md
model/: hypered_rf.pkl
src/: .env  data_collection.py  db_model.py  model_baseline.ipynb  model_services.py  runner.py  runner_builder.py  runner_inference.py
src/Module2/: give_time.py
src/config/: .env  __init__.py  config.py  db.py  logger.py  model.py
src/db/: db_model.py
src/logs/: logging_testing.py
src/models/: model_builder.py  model_inference.py  model_services.py
src/models/model/: base_rf.pkl  hypered.pkl  hypered_rf.pkl
src/models/pipe/: data_collection.py  data_preparation.py  model.py
