[tool.poetry]
name = "ml1nproduction"
version = "0.1.0"
description = ""
authors = ["0xnrous <0xnrous@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2024.4.28"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
